--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,13 @@
 env:
   browser: true
-  es2020: true
+  es2021: true
 extends:
   - 'eslint:recommended'
   - 'plugin:@typescript-eslint/recommended'
 parser: '@typescript-eslint/parser'
 parserOptions:
-  ecmaVersion: 11
+  ecmaVersion: 12
+  sourceType: module
 plugins:
   - '@typescript-eslint'
 rules: {}
