--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "sqs-poller",
   "version": "1.0.0",
   "description": "Polls an sqs instance and executes lambdas",
+  "scripts": {
+    "lint": "eslint 'src/**/*.ts'"
+  },
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.0.14",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "aws-sdk": "^2.708.0",
-    "typescript": "^3.9.5",
-    "eslint": "^7.3.1"
-  },
-  "dependencies": { }
+    "eslint": "^7.12.1",
+    "typescript": "^3.9.5"
+  }
 }
